nsAutoSyncOperation leads to very unexpected behavior since the changes from bug 1646498
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | fixed |
| firefox91 | --- | wontfix |
| firefox92 | --- | fixed |
| firefox93 | --- | fixed |
People
(Reporter: smaug, Assigned: smaug)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr91+
|
Details | Review |
The old setup was per tab, but bug 1646498 changed to rely on browsing context group.
So we end up suppressing microtasks and timers, but yet keep for example input handling running. The issue happens for example when there is a background tab with an alert() open.
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 1•4 years ago
|
||
http://mozilla.pettay.fi/moztests/suppressed_microtasks.html works as a test (it is also testing performance, so typing is slow)
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
Depends on D122290
Updated•4 years ago
|
Comment 4•4 years ago
|
||
| bugherder | ||
Comment 5•4 years ago
|
||
Is there a user-facing issue here which would justify backport consideration or can this fix ride the trains?
| Assignee | ||
Comment 6•4 years ago
|
||
There is. I guess ESR 91 could have this, but I wonder if we want also bug 1724777 there.
Bug 1724777 is I guess riskier than just this one, since this one is only about restoring old behavior.
(but the test is on top of bug 1724777)
Comment 7•4 years ago
|
||
The patch landed in nightly and beta is affected.
:smaug, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
Comment 8•4 years ago
|
||
Olli says we should uplift this fix (and bug 1724777) to Beta 92 and ESR 91 because this bug can cause performance problems with Google Docs and Calendar.
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 9•4 years ago
|
||
Comment on attachment 9235704 [details]
Bug 1724899, suppress microtasks and timers only in the current tab when dom.input_events.canSuspendInBCG.enabled is false, r=kashav
Beta/Release Uplift Approval Request
- User impact if declined: Slower performance (seen at least on some google websites)
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: Bug 1724777
- Risk to taking this patch: Medium
- Why is the change risky/not risky? (and alternatives if risky): The patch is small, but we have shipped the regression for awhile and this brings back the old behavior.
- String changes made/needed: NA
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration:
- User impact if declined:
- Fix Landed on Version:
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky):
- String or UUID changes made by this patch:
Comment 10•4 years ago
|
||
Comment on attachment 9235704 [details]
Bug 1724899, suppress microtasks and timers only in the current tab when dom.input_events.canSuspendInBCG.enabled is false, r=kashav
Approved for 92.0b5. We'll revisit the ESR request when this has baked a bit more.
Comment 11•4 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Comment 12•4 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Description
•