Bug 1724899, suppress microtasks and timers only in the current tab when dom.input_events.canSuspendInBCG.enabled is false, r=kashav

Depends on D122290

Differential Revision: https://phabricator.services.mozilla.com/D122298